credentials-app/envoy.yml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8092
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api"
                          route:
                            cluster: backend_service
                            prefix_rewrite: "/"
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        oidc_provider:
                          issuer: "http://localhost:9000" #"http://host.docker.internal:9000"
                          remote_jwks:
                            http_uri:
                              uri: "http://host.docker.internal:9000/.well-known/jwks.json"
                              cluster: oidc_cluster
                              timeout: 5s
                          forward: true
                      rules:
                        - match:
                            prefix: "/api"
                          requires:
                            provider_name: "oidc_provider"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend_service
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: backend_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend   # Docker Compose service name
                      port_value: 8080

    - name: oidc_cluster
      type: strict_dns
      connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: oidc_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 9000
